[workspace]
resolver = "2"
members = ["app", "domain", "service"]

# WARNING: Replace all git links with registry packages before opening source
[workspace.dependencies.alice-architecture]
git = "https://github.com/kuintessence/alice"

[workspace.dependencies]
domain = { path = "domain" }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.7"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "1.4"
typed-builder = "0.16"
