[workspace]
resolver = "2"
members = ["app", "domain", "service"]

# WARNING: Replace all git links with registry packages before opening source
[workspace.dependencies.alice-architecture]
git = "https://github.com/kuintessence/alice"

[workspace.dependencies.alice-infrastructure]
git = "https://github.com/kuintessence/alice"
features = ["telemetry", "reqwest-middleware"]

[workspace.dependencies.alice-di]
git = "https://github.com/kuintessence/alice"

[workspace.dependencies]
domain = { path = "domain" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
async-trait = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "1.5"
typed-builder = "0.18"
