[workspace]
resolver = "2"
members = ["app", "infrastructure", "domain", "service"]

[workspace.package]
license = "AGPL-3.0"

[workspace.dependencies.alice-infrastructure]
git = "https://github.com/kuintessence/alice"
features = ["telemetry"]

[workspace.dependencies]
domain = { path = "domain" }
infrastructure = { path = "infrastructure" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
async-trait = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "1.5"
typed-builder = "0.18"
tokio = "1.33"
tokio-util = "0.7"
tracing = "0.1"
enum-map = "2.7"
dep-inj = "0.1"
