[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }
service = { path = "../service" }
infrastructure = { workspace = true }
alice-infrastructure = { workspace = true }
# concurrent
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures = "0.3"
arc-swap = "1.6"
crossbeam-queue = "0.3"
# log
tracing = { workspace = true }
# data
config = { version = "0.13", features = ["yaml"] }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytesize = { version = "1.2", features = ["serde"] }
csv = "1.2"
# error
anyhow = { workspace = true }
thiserror = "1.0"
# web
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "multipart",
  "stream",
  "rustls-tls",
] }
reqwest-middleware = "0.2"
reqwest-retry = "0.3"
task-local-extensions = "0.1"
url = { version = "2.5", features = ["serde"] }
base64-url = "2.0"
# middlewares
rdkafka = "0.35"
rustix = { version = "0.38", default-features = false, features = ["fs"] }
walkdir = "2"
# TUI
colored = "2.0"
crossterm = "0.27"
# miscellaneous
chrono = { workspace = true }
regex = { workspace = true }
blake3 = "1.3"
# code
typed-builder = { workspace = true }
indoc = "2"
dep-inj = { workspace = true }
dep-inj-target = "0.1.0"
derive_more = { version = "0.99", default_features = false, features = [
  "as_ref",
] }
retry-policies = "0.2.0"

[build-dependencies]
cmake = "0.1"

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
image = "ubuntu:16.04"
