[package]
name = "domain"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
uuid = { workspace = true, features = ["v4", "serde"] }
serde = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
enum-map = { workspace = true }
strum = { version = "0.25", features = ["derive"] }
