[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
dashmap = "5"
dep-inj = { workspace = true }
